--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -9,4 +9,20 @@ user.roles=Роли
 user.active=Активный
 user.registered=Зарегистрирован
 meal.title=Моя еда
+meal.filter=Фильтровать
+meal.fromDate=С даты (включительно):
+meal.toDate=По дату (включительно):
+meal.fromTime=С времени (включительно):
+meal.toTime=До времени (исключая):
+meal.date=Дата
+meal.description=Описание
+meal.calories=Калории
+meal.add=Добавить еду
+meal.update=Обновить
+meal.delete=Удалить
+meal.create=Создать еду
+meal.edit=Редактировать еду
+meal.dateTime=Дата и время
+meal.save=Сохранить
+meal.cancel=Отменить
 common.select=Выбрать
