--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -20,6 +20,7 @@ user.active=Активный
 user.registered=Зарегистрирован
 user.password=Пароль
 user.caloriesPerDay=Норма калорий в день
+user.uniqueEmailError=Пользователь с таким адресом электронной почты уже существует
 
 meal.title=Моя еда
 meal.edit=Редактировать еду
@@ -32,6 +33,7 @@ meal.endTime=До времени (исключая)
 meal.description=Описание
 meal.dateTime=Дата/Время
 meal.calories=Калории
+meal.uniqueDatetime=Еда с таким временем создания уже существует
 
 common.add=Добавить
 common.select=Выбрать
@@ -40,6 +42,7 @@ common.saved=Запись сохранена
 common.enabled=Запись активирована
 common.disabled=Запись деактивирована
 common.errorStatus=Статус ошибки
+common.validationError=Ошибка проверки данных
 common.appError=Ошибка приложения
 common.confirm=Вы уверены?
 common.save=Сохранить
