--- a/config/messages/app_ru.properties
+++ b/config/messages/app_ru.properties
@@ -9,6 +9,7 @@ app.login=Зайти как
 app.profile=профиль
 app.register=Регистрация
 app.registered=Вы зарегистрированы. Введите ваш логин/пароль.
+app.locale=ru
 
 user.title=Пользователи
 user.edit=Редактировать пользователя
@@ -21,6 +22,7 @@ user.registered=Зарегистрирован
 user.password=Пароль
 user.caloriesPerDay=Норма калорий в день
 user.uniqueEmailError=Пользователь с таким адресом электронной почты уже существует
+user.passwordSizeError=Длина должна быть между 5 и 32 символами
 
 meal.title=Моя еда
 meal.edit=Редактировать еду
